--- a/boutique3/app/Resources/views/layout.html.twig
+++ b/boutique3/app/Resources/views/layout.html.twig
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
             <!-- La marque -->
-                <a class="navbar-brand" href="">MA BOUTIQUE</a>
+                <a class="navbar-brand" href="{{path('accueil')}}">MA BOUTIQUE</a>
         
             <!-- Le burger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav1" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
