--- a/boutique3/app/Resources/views/layout.html.twig
+++ b/boutique3/app/Resources/views/layout.html.twig
@@ -37,8 +37,8 @@
                             <li><a class="nav-link" href="{{path('accueil')}}">Boutique</a></li>
                             <li><a class="nav-link" href="{#{{path('profil')}}#}">Profil</a></li>
                             <li><a class="nav-link" href="{#{{path('panier')}}#}">Panier</a></li>
-                            <li><a class="nav-link" href="{#{{path('connexion')}}#}">Connexion</a></li>
-                            <li><a class="nav-link" href="{#{{path('inscription')}}#}">Inscription</a></li>
+                            <li><a class="nav-link" href="{{path('connexion')}}">Connexion</a></li>
+                            <li><a class="nav-link" href="{{path('inscription')}}">Inscription</a></li>
                     
                     </ul>
                 </div>
