--- a/boutique3/src/BoutiqueBundle/Resources/views/Admin/show_produit.html.twig
+++ b/boutique3/src/BoutiqueBundle/Resources/views/Admin/show_produit.html.twig
@@ -24,7 +24,7 @@
         {% for pdt in produits %}
         <tr>
             <th>{{ pdt.id_produit }}</th>
-            <th><img height="80" src="{{ asset('photo/' ~ pdt.photo ) }}"</th> 
+            <th><img height="80" src="{{ asset('photo/' ~ pdt.photo ) }}"/></th> 
             <th>{{ pdt.Titre }}</th>
             <th>{{ pdt.categorie }}</th>
             <th>{{ pdt.reference }}</th>
