--- a/boutique3/app/Resources/views/layout.html.twig
+++ b/boutique3/app/Resources/views/layout.html.twig
@@ -35,12 +35,30 @@
                 <div class="collapse navbar-collapse" id="nav1">
                     <ul class="navbar-nav ml-auto">
                             <li><a class="nav-link" href="{{path('accueil')}}">Boutique</a></li>
-                            <li><a class="nav-link" href="{#{{path('profil')}}#}">Profil</a></li>
                             <li><a class="nav-link" href="{#{{path('panier')}}#}">Panier</a></li>
+
+                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            {# Signifie : si user est connecté, peu import son ROLE #}
+                            <li><a class="nav-link" href="{{path('profil')}}">Profil</a></li>
+                            <li><a class="nav-link" href="{{path('deconnexion')}}">Deconnexion</a></li>
+                            {% else %}
+
                             <li><a class="nav-link" href="{{path('connexion')}}">Connexion</a></li>
                             <li><a class="nav-link" href="{{path('inscription')}}">Inscription</a></li>
+                            {% endif %}
+
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <li><a class="nav-link" href="{{path('show_produit')}}">Admin</a></li>
+                            {% endif %}
                     
                     </ul>
+                </div>
+
+                <div class="collapse navbar-collapse" id="nav1">
+                    <form method="post" action="">
+                        <input type="search" name="search" placeholder="Votre recherche..." />
+                        <input type="submit" value="OK" />
+                    </form>
                 </div>
             </div>
         </nav>
