--- a/boutique3/src/BoutiqueBundle/Resources/views/Membre/connexion.html.twig
+++ b/boutique3/src/BoutiqueBundle/Resources/views/Membre/connexion.html.twig
@@ -7,6 +7,24 @@
     <span class="alert alert-success">{{ msg }}</span>
 {% endfor %}
 
+{% for msg in app.session.flashbag.get('error') %}
+    <span class="alert alert-danger">{{ msg }}</span>
+{% endfor %}
+
+<form method="post" action="{{ path('connexion') }}">
+    <div class="form-group">
+        <label>Pseudo</label>
+        <input type="text" name="_username" value="{{lastusername}}" class="form-control"  />
+    </div>
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" name="_password" class="form-control"  />
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary" >Connexion</button>
+    </div>
+</form>
+
 
 
 {% endblock %}
