--- a/boutique3/src/BoutiqueBundle/Resources/views/Admin/show_membre.html.twig
+++ b/boutique3/src/BoutiqueBundle/Resources/views/Admin/show_membre.html.twig
@@ -35,7 +35,7 @@
             <th>{{ pdt.email }}</th>
             <th>{{ pdt.civilite }}</th>
             <th>{{ pdt.ville }}</th>
-            <th>{{ pdt.code_postal }}</th>
+            <th>{{ pdt.codePostal }}</th>
             <th>{{ pdt.statut }}</th>
             <th>{{ pdt.adresse }}</th>
             <th>{{ pdt.role }}</th>
