--- a/boutique3/app/Resources/views/layout.html.twig
+++ b/boutique3/app/Resources/views/layout.html.twig
@@ -40,11 +40,11 @@
                             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                             {# Signifie : si user est connecté, peu import son ROLE #}
                             <li><a class="nav-link" href="{{path('profil')}}">Profil</a></li>
-                            <li><a class="nav-link" href="{{path('deconnexion')}}">Deconnexion</a></li>
+                            <li><a class="nav-link" href="{{path('fos_user_security_logout')}}">Deconnexion</a></li>
                             {% else %}
 
-                            <li><a class="nav-link" href="{{path('connexion')}}">Connexion</a></li>
-                            <li><a class="nav-link" href="{{path('inscription')}}">Inscription</a></li>
+                            <li><a class="nav-link" href="{{path('fos_user_security_login')}}">Connexion</a></li>
+                            <li><a class="nav-link" href="{{path('fos_user_registration_register')}}">Inscription</a></li>
                             {% endif %}
 
                             {% if is_granted('ROLE_ADMIN') %}
